--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "serve": "^12.0.1",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "PORT=80 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
